tests/frontend/pass/negative-literals.act
constructor of C
interface constructor()

creates

    int totalSupply := -1
