tests/frontend/fail/untimed_entry.act
constructor of Fail
interface constructor(uint y)

creates

  uint x := y

ensures

  x >= y
